# zeropool-near

./: .gitignore  Cargo.toml  README.md  deploy.sh  ft.txt  package.json
contract/: Cargo.toml
contract/src/: lib.rs  tx_decoder.rs  verifier.rs
ft/: .gitignore  Cargo.toml  README.md
ft/src/: lib.rs
operator-manager/: Cargo.toml
operator-manager/src/: lib.rs
pool/: Cargo.toml  README.md
pool/src/: lib.rs  reserves.rs  temp_deposits.rs  tx_decoder.rs  verifier.rs
relayer-contract/: Cargo.toml
relayer-contract/src/: lib.rs
relayer-pool/: Cargo.toml
relayer-pool/src/: lib.rs
scripts/: build  deploy  deploy-dev  deploy-ft  deploy-init  redeploy
src/: lib.rs  lockup.rs  num.rs  pool.rs  tx_decoder.rs  verifier.rs  withdraw.rs
src/verifiers/: default.rs  mod.rs
src/verifiers/groth16/: mod.rs  util.rs
