[package]
name = "zeropool-near-pool"
version = "1.0.0"
authors = ["Dmitry Vdovin <voidxnull@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
borsh = "0.9.3"
near-sdk = { git = "https://github.com/zeropoolnetwork/near-sdk-rs", branch = "feature/alt_bn128_new", features = ["unstable"] }
near-contract-standards = { git = "https://github.com/zeropoolnetwork/near-sdk-rs", branch = "feature/alt_bn128_new" }
num-derive = "0.3.3"
num-traits = "0.2.15"
ff-uint = { version = "0.2.4", default-features = false }
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dev-dependencies]
hex-literal = "0.3.4"

[features]
default = ["borsh_support"]
borsh_support = ["ff-uint/borsh_support"]
