[package]
name = "zeropool-near-pool"
version = "1.0.0"
authors = ["Dmitry Vdovin <voidxnull@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
borsh = "0.9.3"
near-sdk = { git = "https://github.com/zeropoolnetwork/near-sdk-rs", branch = "feature/alt_bn128_new", features = ["unstable"] }
near-contract-standards = { git = "https://github.com/zeropoolnetwork/near-sdk-rs", branch = "feature/alt_bn128_new" }
ed25519-dalek = "1.0.1"
num-derive = "0.3.3"
num-traits = "0.2.15"
ff-uint = { version = "0.2.4", default-features = false }
serde = "1.0.145"
serde_json = { version = "1.0.73", optional = true }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
hex-literal = "0.3.4"
libzeropool-rs = { version = "0.8.1", features = ["multicore"] }
near-crypto = "0.14.0"

[features]
default = ["borsh_support", "rand_support"]
ft = ["serde_json"]
borsh_support = ["ff-uint/borsh_support"]
rand_support = ["ff-uint/rand_support"]
heavy_tests = []

