[package]
name = "zeropool-near-operator-manager"
version = "1.0.0"
authors = ["Dmitry Vdovin <voidxnull@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
borsh = "0.9.3"
near-sdk = { path = "../../near-sdk-rs/near-sdk", features = ["unstable"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dev-dependencies]
hex-literal = "0.3.4"

