[package]
name = "greeter"
version = "1.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
borsh = "0.9.3"
near-sdk = { path = "../../near-sdk-rs/near-sdk", features = ["unstable"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []

[dev-dependencies]
hex-literal = "0.3.4"

